# nix-remote-delivery

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: main.rs
